--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "project",
-  "dependencies": {},
   "devDependencies": {
-    "webpack": "^2.0",
-    "ts-loader": "*",
-    "typescript": "*"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "build": "webpack",
