--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack -w"
-  }
+    "server": "webpack-dev-server",
+    "watch": "webpack -w",
+    "build": "webpack"
+  },
+  "dependencies": {
+    "webpack-dev-server": "^5.0.4"
+  },
+  "version": "1.0.0",
+  "description": "",
+  "main": "webpack.config.js",
+  "author": "",
+  "license": "ISC"
 }
