--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
     "compilerOptions": {
-      "outDir": "./dist/",
-     "sourceMap": true,
+      "outDir": "./public/",
       "noImplicitAny": true,
-      "module": "commonjs",
-      "target": "es5",
+      "module": "es2015",
+      "target": "es6",
       "jsx": "react",
       "allowJs": true,
       "moduleResolution": "node",
+      "strict": true,
+      "sourceMap": true,
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
     }
   }
